add static list by using css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="utf-8">
     <title>Workout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Workout</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="well">
+            <ul class="list-group">
+                <li class="list-group-item clearfix">
+                    <span>跑步</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" placeholder="持续时间">
+                    </span>
+                </li>
+                <li class="list-group-item clearfix">
+                    <span>游泳</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" placeholder="持续时间">
+                    </span>
+                </li>
+                <li class="list-group-item clearfix">
+                    <span>俯卧撑</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" placeholder="持续时间">
+                    </span>
+                </li>
+                <li class="list-group-item clearfix">
+                    <span>跳绳</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" placeholder="持续时间">
+                    </span>
+                </li>
+                <li class="list-group-item clearfix">
+                    <span>仰卧起坐</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" placeholder="持续时间">
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
