--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </nav>
     <div class="container">
         <div class="well">
+            <label for="total">总时间：</label><span id="total"></span>
             <ul class="list-group">
             </ul>
         </div>
@@ -34,10 +35,22 @@
             $.each(list, function (index, item) {
                 var $item = $('<li>').addClass('list-group-item clearfix');
                 $item.append($('<span>').html(item.name));
-                $item.append($('<span>').addClass('col-md-2 pull-right').html($('<input type="text">').attr('placeholder', '持续时间')));
+                var $time = $('<input type="text">').addClass('workout_time').attr('placeholder', '持续时间（秒）');
+                $time.keyup(updateTime);
+                $item.append($('<span>').addClass('col-md-2 pull-right').html($time));
 
                 $list.append($item);
             });
+
+            function updateTime () {
+                var total = 0;
+                $('.workout_time').each(function () {
+                    total += ($(this).val() - 0 || 0)*1000;
+                });
+
+                var totalDate = new Date(total - 8*3600*1000);
+                $('#total').text([totalDate.getHours(), totalDate.getMinutes(), totalDate.getSeconds()].join('\''));
+            }
         })(jQuery);
     </script>
 </body>
