--- a/index.html
+++ b/index.html
@@ -5,53 +5,27 @@
     <title>Workout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
+    <script src="lib/angularjs/angular.min.js"></script>
+    <script src="js/controller.js"></script>
 </head>
-<body>
+<body ng-app="workoutApp">
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Workout</a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container" ng-controller="workoutCtrl">
         <div class="well">
             <label for="total">总时间：</label><span id="total"></span>
             <ul class="list-group">
+                <li class="list-group-item clearfix" ng-repeat="item in list">
+                    <span>{{item.name}}</span>
+                    <span class="col-md-2 pull-right">
+                        <input type="text" ng-model="item.time" placeholder="持续时间">
+                    </span>
+                </li>
             </ul>
         </div>
     </div>
-
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script>
-        (function ($) {
-            var list = [
-                {name: '跑步'},
-                {name: '游泳'},
-                {name: '俯卧撑'},
-                {name: '跳绳'},
-                {name: '仰卧起坐'}
-            ];
-
-            var $list = $('.list-group');
-            $.each(list, function (index, item) {
-                var $item = $('<li>').addClass('list-group-item clearfix');
-                $item.append($('<span>').html(item.name));
-                var $time = $('<input type="text">').addClass('workout_time').attr('placeholder', '持续时间（秒）');
-                $time.keyup(updateTime);
-                $item.append($('<span>').addClass('col-md-2 pull-right').html($time));
-
-                $list.append($item);
-            });
-
-            function updateTime () {
-                var total = 0;
-                $('.workout_time').each(function () {
-                    total += ($(this).val() - 0 || 0)*1000;
-                });
-
-                var totalDate = new Date(total - 8*3600*1000);
-                $('#total').text([totalDate.getHours(), totalDate.getMinutes(), totalDate.getSeconds()].join('\''));
-            }
-        })(jQuery);
-    </script>
 </body>
 </html>
