--- a/tmpl/create_workout.html
+++ b/tmpl/create_workout.html
@@ -1,21 +1,25 @@
-<div class="modal fade" ng-class="{'in show':editingWorkout.name !== undefined}">
+<div class="modal fade" ng-class="{'in show': editingWorkout != null}">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <a class="close" ng-click="cancel()"><span>&times;</span></a>
                 <h4 class="modal-title">添加新的锻炼</h4>
             </div>
-            <div class="modal-body form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-3 col-md-2 col-lg-2 control-label" for="name">名称：</label>
-                    <div class="col-sm-9 col-md-10 col-lg-10">
-                        <input type="text" id="name" class="form-control" ng-model="editingWorkout.name">
+            <div class="modal-body">
+                <form name="workout" class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-3 col-md-2 col-lg-2 control-label" for="name">名称：</label>
+                        <div class="col-sm-9 col-md-10 col-lg-10" ng-class="{'has-error has-feedback': workout.name.$invalid && !workout.name.$pristine}">
+                            <input type="text" id="name" name="name" class="form-control" ng-model="editingWorkout.name" required>
+                            <span class="glyphicon glyphicon-remove form-control-feedback" ng-show="workout.name.$invalid && !workout.name.$pristine"></span>
+                            <span class="help-block" ng-show="workout.name.$invalid && !workout.name.$pristine">请填写名称</span>
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" ng-click="cancel()">取消</button>
-                <button type="button" class="btn btn-primary" ng-click="save()">保存</button>
+                <button type="button" class="btn btn-default" ng-click="cancel(workout)">取消</button>
+                <button type="button" class="btn btn-primary" ng-click="save(workout)">保存</button>
             </div>
         </div>
     </div>
