--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <script src="lib/angularjs/angular.min.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/date-editor.js"></script>
 </head>
@@ -15,25 +17,6 @@
             <a class="navbar-brand" href="#">Workout</a>
         </div>
     </nav>
-    <div class="container" ng-controller="workoutCtrl">
-        <div class="panel">
-            <div class="panel-heading">
-                <a class="btn btn-primary" ng-click="new()">添加</a>
-            </div>
-            <div class="panel-body well">
-                <label>总时间：</label><span ng-bind="total() - 8*3600*1000 | date : 'HH:mm:ss'"></span>
-                <ul class="list-group">
-                    <li class="list-group-item clearfix" ng-repeat="item in list">
-                        <span>{{item.name}}</span>
-                        <span ng-bind="item.start | date:'yyyy/MM/dd'"></span>
-                        <span class="col-md-5 pull-right text-right">
-                            <input type="text" ng-model="item.time" placeholder="持续时间">
-                        </span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div ng-include="'tmpl/create_workout.html'"></div>
-    </div>
+    <div class="container" ng-view></div>
 </body>
 </html>
