--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="lib/angularjs/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/service.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/date-editor.js"></script>
 </head>
