--- a/tmpl/view_workout.html
+++ b/tmpl/view_workout.html
@@ -16,5 +16,13 @@
                 <div class="form-control-static">{{workout.time*1000 - 3600*8*1000 | date: 'HH小时mm分钟ss秒'}}</div>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-3 col-md-2 col-lg-2 control-label">参与人员：</label>
+            <div class="col-sm-9 col-md-2 col-lg-2">
+                <div class="form-control-static">
+                    <span ng-repeat="member in members">{{member}},&nbsp;</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
