--- a/unit/test.html
+++ b/unit/test.html
@@ -13,7 +13,9 @@
   <script src="../lib/angularjs/angular.min.js"></script>
   <script src="../lib/angular-route/angular-route.js"></script>
   <script src="../lib/angular-mocks/angular-mocks.js"></script>
-  <script src="../js/app.js"></script>
+  <script>
+    var workoutApp = angular.module('workoutApp', ['ngRoute', 'ngMock']);
+  </script>
   <script src="../js/controller.js"></script>
 
   <!-- include spec files here... -->
