add unit test for service with http request

--- a/unit/test.html
+++ b/unit/test.html
@@ -17,9 +17,11 @@
     var workoutApp = angular.module('workoutApp', ['ngRoute', 'ngMock']);
   </script>
   <script src="../js/controller.js"></script>
+  <script src="../js/service.js"></script>
 
   <!-- include spec files here... -->
   <script src="controllerSpec.js"></script>
+  <script src="serviceSpec.js"></script>
 
 </head>
 
