add unit test for directive

--- a/unit/test.html
+++ b/unit/test.html
@@ -18,10 +18,12 @@
   </script>
   <script src="../js/controller.js"></script>
   <script src="../js/service.js"></script>
+  <script src="../js/date-editor.js"></script>
 
   <!-- include spec files here... -->
   <script src="controllerSpec.js"></script>
   <script src="serviceSpec.js"></script>
+  <script src="directiveSpec.js"></script>
 
 </head>
 
