add a directive for chart

--- a/tmpl/workouts.html
+++ b/tmpl/workouts.html
@@ -15,4 +15,6 @@
         </ul>
     </div>
 </div>
+<button class="btn btn-primary" ng-click="randomChart()">Line Chart</button>
+<div chart="chart" width="800" height="500"></div>
 <div ng-include="'tmpl/create_workout.html'"></div>
