--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Workout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
+    <script src="lib/chartjs/Chart.js"></script>
     <script src="lib/angularjs/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/service.js"></script>
     <script src="js/controller.js"></script>
+    <script src="js/chart.js"></script>
     <script src="js/date-editor.js"></script>
 </head>
 <body ng-app="workoutApp">
